# 3DCollisionDetection

./: README.md
examples/spherefile/: simple_1.csv
src/: CMakeLists.txt  collide.cpp  slurm.test.sh
src/geometry/: geometry.h  hash3d.h
src/tests/: test_collision.cpp  test_geometry.cpp  test_read_csv.cpp
src/utils/: _time_struct.h  debug.h  time_cuda.cu  time_cuda.h  time_omp.h  time_unix.h
